<resources>
    <string name="app_name">Bread of the Wild</string>
    <string name="title">Bread of the wild</string>
    <string name="subTitle">A Legend of Zelda cooking guide</string>
    <string name="toLoginScreen">Start</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="newUserButton">New User</string>
    <string name="signInButton">Sign In</string>

    <string name="buttonToFood">All Recipes</string>
    <string name="overviewRecipes">Recipes</string>

    <string name="buttonToIngredients">All Ingredients</string>
    <string name="overviewIngredients">Ingredients</string>

    <string name="buttonToCookbook">My Cookbook</string>

    <string name="item_name">Name</string>
    <string name="item_subclass">Subclass</string>
    <string name="item_description">Description</string>
    <string name="item_image">Item Image</string>
    <string name="item_effect">Effect</string>
    <string name="item_button">Add or Delete Button</string>
</resources>
