<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/item_image" />

    <TextView
        android:id="@+id/main_name"
        android:layout_width="356dp"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/main_image"
        android:layout_toRightOf="@id/main_image"
        android:paddingBottom="5dp"
        android:text="@string/item_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:fontFamily="@font/zelda"/>

    <TextView
        android:id="@+id/main_subclass"
        android:layout_width="356dp"
        android:layout_height="43dp"
        android:layout_toEndOf="@id/main_image"
        android:layout_toRightOf="@id/main_image"
        android:layout_below="@id/main_name"
        android:paddingBottom="5dp"
        android:text="@string/item_subclass"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:fontFamily="@font/rokkitt_bold"/>


    <TextView
        android:id="@+id/main_description"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_subclass"
        android:layout_toEndOf="@id/main_image"
        android:layout_toRightOf="@id/main_image"
        android:text="@string/item_description"
        android:textSize="18sp"
        android:textColor="#fff"
        android:fontFamily="@font/rokkitt"/>
</RelativeLayout>