<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/main_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="2dp"
        android:contentDescription="@string/item_image" />

    <TextView
        android:id="@+id/main_name"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/main_image"
        android:layout_toRightOf="@id/main_image"
        android:fontFamily="@font/zelda"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:text="@string/item_name"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/main_subclass"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_toEndOf="@id/main_image"
        android:layout_toRightOf="@id/main_image"
        android:layout_below="@id/main_name"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/item_subclass"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#fff"

        android:paddingStart="15dp" />

    <TextView
        android:id="@+id/main_effect"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_below="@id/main_name"
        android:layout_toEndOf="@id/main_subclass"
        android:layout_toRightOf="@id/main_subclass"
        android:text="@string/item_effect"
        android:textColor="#fff"
        android:textSize="15sp"
        android:paddingTop="5dp"
        android:fontFamily="@font/rokkitt"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textStyle="bold"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp" />

    <TextView
        android:id="@+id/main_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_subclass"
        android:layout_toEndOf="@id/main_image"
        android:layout_toRightOf="@id/main_image"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/item_description"
        android:textSize="18sp"
        android:textColor="#fff"
        android:fontFamily="@font/rokkitt"/>

=

    <ImageButton
        android:id="@+id/main_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/item_button"
        android:padding="2dp"
        android:scaleType="fitCenter"
        android:src='@drawable/add' />

</RelativeLayout>
